# adventofcode2022

./: pyproject.toml
day01/: main.py
model/: elf.py
