[tool.poetry]
name = "adventofcode2022"
version = "1.0.0"
description = "My Advent Of Code 2022 project"
authors = ["Jaroslav Staněk <jaroslav-stanek@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.15"
numpy = "^1.23.5"
black = "^22.10.0"
flake8 = "^6.0.0"
pylint = "^2.15.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
